--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </nav>
      <section id="showcase">
          <div class="container">
-             <h2>COMPEC ROCKS!</h2>
+             <h2>COMPEC GETS!</h2>
             </div>
          </section>
         <div class="container"></div>
